feat: 系统配置实体类支持key命名生成策略配置; 系统配置实体类字段支持枚举类型; 系统日志配置作为单独的管理端一级菜单插件